fix phone spacing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -256,7 +256,7 @@ body {
 
   .experience-container {
     width: 100%;
-    padding: 0;
+    padding-left: 2.5rem;
     margin: 0;
   }
 
@@ -279,18 +279,18 @@ body {
   }
 
   .whoami-container {
-    padding-left: 1rem;
+    // padding-left: 1rem;
     padding-top: 1rem;
   }
 
   .skills-title {
-    padding-left: 1rem;
-    padding-top: 1rem;
+    // padding-left: 1rem;
+    padding-top: 4rem;
   }
 
   .skills-container {
-    //padding-left: 1rem;
-    padding-top: 1rem;
+    padding-left: 1rem;
+    // padding-top: 1rem;
   }
 .all-skills-container {
     padding-left: 0;
